# foodlabel

./: README.md  analyze.py  api.py  blinkit.py  daily_values.py  googli.py  mistral.py  package-lock.json  prompts.py  pyproject.toml  requirements.txt
data/: FDA--FoodSubstances.csv  FDA--SCOGS.csv  monographs.csv  roc15_casrn_index.csv
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/assets/: analysis-animation.json
frontend/src/components/: Navigation.jsx  ProductAnalyzer.jsx
frontend/src/pages/: RecentsPage.jsx
