[tool.poetry]
name = "foodlabel"
version = "0.1.0"
description = ""
authors = ["codeblech <my.malikyash@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.24.0"
python-dotenv = "^1.0.1"
pillow = "^10.4.0"
flask = "^3.0.3"
flask-cors = "^5.0.0"
werkzeug = "^3.1.3"
pandas = "^2.2.3"
mistralai = "^1.2.3"
google-api-python-client = "^2.154.0"
protobuf = "^5.28.3"
google-generativeai = "^0.8.3"
aiohttp = "^3.11.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
